2010-05-11  Sancho Lerena <slerena@artica.es>

	* util/dns_plugin.sh: New DNS plugin for the Plugin Server. It
	checks a Domain/IP pair and also get time to get response from
	a given DNS server (ms).

2010-05-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Made cascade protection recursive to
          check any of the agent's parents in the tree.

2010-05-10  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Tools.pm: Typo fix in error message

2010-05-07  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed call to undefined variable
	on GIS code.

2010-05-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Use the data timestamp instead of the
	  current time in the compression algorithm. Fixed regexps in
	  SNMP alerts.

2010-04-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Changed the behaviour of SNMP alerts.
	  Alert conditions are ANDed, not ORed.

2010-04-28  Sancho Lerena <slerena@artica.es>

	* util/gpx2pandora_agent_data.pl: Added support to process
	gpx files with tracks, plus the RTE format.

	* lib/PandoraFMS/Core.pm: Fixed call to group stats and now
	process all groups (included disabled) and group 1, because
	with 3.1 group id 1 is not "all" anymore.

2010-04-26  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Fixed the purge script. Did not work if
	  any of the data tables was empty.

2010-04-23  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Removed a Log4x trace. Log4x feature 
	has been tested at this level, and works fine.

2010-04-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Added support for service
	  modules (Enterprise).

2010-04-05  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Trying to fix the problem detected 
	with recon and new modules from a network template.

	* lib/PandoraFMS/Core.pm: Fallback to previous version, this fix